fix(feed): Task assignee names not truncating IE11

--- a/src/components/media/Media.scss
+++ b/src/components/media/Media.scss
@@ -18,6 +18,7 @@
 // the main content, e.g. title and message
 .bdl-Media-body {
     flex: 1 1 100%;
+    overflow: hidden;
     word-wrap: break-word; // old IE
     word-break: break-word; // CJK scripts
     // handle wrapping long words in text content without breaking
